--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-node_modules/
-build/
-storybook-static/
+# dependencies
+node_modules
+
+# builds
+build
+storybook-static
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
