--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@liveintent/ui",
+  "description": "LiveIntent UI Library",
   "version": "0.1.0",
   "main": "build/index.js",
   "module": "build/index.esm.js",
@@ -7,7 +8,6 @@
     "build"
   ],
   "types": "build/index.d.ts",
-  "description": "LiveIntent UI Library",
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
@@ -31,12 +31,21 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.4",
+    "prettier": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rollup": "^2.38.0",
